# OfflineMessenger

./: README.md
Client Application/build-qt_project-Desktop_Qt_6_6_1_GCC_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Client Application/build-qt_project-Desktop_Qt_6_6_1_GCC_64bit-Release/.cmake/api/v1/reply/: cache-v2-99b63a1b3aa402ae20c4.json  cmakeFiles-v1-77d756d4734062d7386e.json  codemodel-v2-a1953d5fef9dec4e6a75.json  directory-.-Release-e06c0b7cba656929845c.json  index-2023-12-30T14-10-35-0998.json  target-qt_project-Release-57105479ddbbd92cbb30.json  target-qt_project_autogen-Release-498a8679d0a9186d808e.json
Client Application/build-qt_project-Desktop_Qt_6_6_1_GCC_64bit-Release/qt_project_autogen/: mocs_compilation.cpp
Client Application/build-qt_project-Desktop_Qt_6_6_1_GCC_64bit-Release/qt_project_autogen/EWIEGA46WW/: moc_conversations_page.cpp  moc_login_or_register_page.cpp  moc_mainwindow.cpp
Client Application/build-qt_project-Desktop_Qt_6_6_1_GCC_64bit-Release/qt_project_autogen/include/: ui_conversations_page.h  ui_login_or_register_page.h  ui_mainwindow.h
Client Application/qt_project/: CMakeLists.txt  conversations_page.cpp  conversations_page.h  conversations_page.ui  login_or_register_page.cpp  login_or_register_page.h  login_or_register_page.ui  login_page.h  login_page.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  users_page.h  users_page.ui
Server Application/: CMakeLists.txt  handle_clients_logic.cpp  handle_clients_logic.h  main.cpp  queries_logic.cpp  queries_logic.h
